configured nginx and docker compose to work with new added amenities microservice. also configured an http file for testing

--- a/docker-compose/configs/nginx.conf
+++ b/docker-compose/configs/nginx.conf
@@ -19,5 +19,9 @@ http {
         location /sessions/ {
             proxy_pass http://sessions:8080;
         }
+
+        location /amenities/ {
+            proxy_pass http://amenities:8080;
+        }
     }
 }
