used nginx for react and angular, updated docker-compose.yaml, updated demo-app.yaml, removed comments

--- a/docker-compose/demo-app.yaml
+++ b/docker-compose/demo-app.yaml
@@ -26,3 +26,13 @@ services:
     build: ../src/webapp
     ports:
       - 50000:8080
+
+  guest_webapp:
+    build: ../src/guest_webapp
+    ports:
+      - 8081:80
+  
+  staff_webapp:
+    build: ../src/staff_webapp
+    ports:
+      - 8082:80
