--- a/docker-compose/docker-compose.yaml
+++ b/docker-compose/docker-compose.yaml
@@ -30,7 +30,7 @@ services:
     ports:
       - 50000:8080
 
-  amenities:
+  amenities: #uses port 50004
     extends:
       file: ../src/amenities/docker-compose.yaml
       service: amenities
