--- a/docker-compose/configs/nginx.conf
+++ b/docker-compose/configs/nginx.conf
@@ -19,5 +19,9 @@ http {
         location /sessions/ {
             proxy_pass http://sessions:8080;
         }
+
+        location /incident_reports/ {
+            proxy_pass http://incident_reports:8080;
+        }
     }
 }
