--- a/src/incident_reports/Dockerfile
+++ b/src/incident_reports/Dockerfile
@@ -1,10 +1,10 @@
 FROM python:3.11-alpine
 
-WORKDIR /incident_reports_server
+WORKDIR /app
 
 COPY requirements.txt requirements.txt
 RUN pip install -r requirements.txt
 COPY . .
 
 EXPOSE 8080
-CMD ["python", "/incident_reports_server/controllers/incident_reports_controller.py"]
+CMD ["python", "-m", "incident_reports_server.controllers.incident_reports_controller"]
