--- a/src/accounts/Dockerfile
+++ b/src/accounts/Dockerfile
@@ -1,10 +1,10 @@
 FROM python:3.11-alpine
 
-WORKDIR /app
+WORKDIR /
 
 COPY requirements.txt requirements.txt
 RUN pip install -r requirements.txt
 COPY . .
 
 EXPOSE 8080
-CMD ["python", "app/Accounts.py"]
+CMD ["python3", "-m", "app"]
