--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -1,4 +1,4 @@
-name: Build Docker
+name: Run unit tests
 
 on:
   push:
@@ -15,6 +15,6 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Runs the tests for the account service
-      run: cd ./src/accounts/ 
-      run: pip install -r requirements.txt
-      run: python3 -m tests
+    - run: cd ./src/accounts/ 
+    - run: pip install -r requirements.txt
+    - run: python3 -m tests
