--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -1,20 +1,36 @@
-name: Run unit tests
+# This workflow will install Python dependencies, run tests and lint with a variety of Python versions
+# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
+
+name: Python package
 
 on:
   push:
-    branches: [ "main", "dev" ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ "main", "dev" ]
+    branches: [ "main" ]
 
 jobs:
-
-  account_test:
+  build:
 
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: ["3.9", "3.10", "3.11"]
 
     steps:
     - uses: actions/checkout@v4
-    - name: Runs the tests for the account service
-    - run: cd ./src/accounts/ 
-    - run: pip install -r requirements.txt
-    - run: python3 -m tests
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v3
+      with:
+        python-version: ${{ matrix.python-version }}
+    - name: Install dependencies
+      run: |
+        cd ./src/accounts/
+        python3 -m pip install --upgrade pip
+        python3 -m pip install -r requirements.txt
+       
+
+    - name: Test with pytest
+      run: |
+        python3 -m tests
