--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
-name: Python package
+name: Test account serivce
 
 on:
   push:
@@ -31,6 +31,6 @@ jobs:
         python3 -m pip install -r requirements.txt
        
 
-    - name: Test with pytest
+    - name: Test with unittest
       run: |
         python3 -m tests
