--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -75,7 +75,7 @@ jobs:
       with:
         dotnet-version: 8.0.x
     - name: Select Directory
-      run: cd ~/Concierge/src/amenities
+      run: cd ~/src/amenities
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
