added quick test to be deleted

--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -75,7 +75,10 @@ jobs:
       with:
         dotnet-version: 8.0.x
     - name: Select Directory
-      run: cd ~/src/amenities
+      run: |
+      cd ~
+      ls
+      cd ~/src/amenities
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
