--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -75,10 +75,10 @@ jobs:
         dotnet-version: 8.0.x
     - name: Select Directory
       run: |
-        cd /home/runner/work/Concierge/Concierge/src/amenities
+        cd /home/runner/work/Concierge/Concierge/src/amenities/amenities_server
     - name: Build
       run: dotnet build
     - name: Test
       run: |
-        cd ./amenities_test
+        cd ../amenities_test
         dotnet test
