--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -75,8 +75,12 @@ jobs:
         dotnet-version: 8.0.x
     - name: Select Directory
       run: |
-        cd /home/runner/work/Concierge/Concierge/src/amenities/amenities_test/
-
+        cd /home/runner/work/Concierge/Concierge/src/amenities
+    - name: Restore dependencies
+      run: dotnet restore ./amenities_server/amenities_server.csproj
+    - name: Build
+      run: dotnet build --no-restore ./amenities_server/amenities_server.csproj
     - name: Test
       run: |
-        dotnet test
+        cd ./amenities_test
+        dotnet test --no-build --verbosity normal ./amenities_test/amenities_test.csproj
