Updated directories again

--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -77,10 +77,10 @@ jobs:
       run: |
         cd /home/runner/work/Concierge/Concierge/src/amenities
     - name: Restore dependencies
-      run: dotnet restore ./amenities_server/amenities_server.csproj
+      run: dotnet restore /home/runner/work/Concierge/Concierge/src/amenities/amenities_server/amenities_server.csproj
     - name: Build
-      run: dotnet build --no-restore ./amenities_server/amenities_server.csproj
+      run: dotnet build --no-restore /home/runner/work/Concierge/Concierge/src/amenities/amenities_server/amenities_server.csproj
     - name: Test
       run: |
         cd ./amenities_test
-        dotnet test --no-build --verbosity normal ./amenities_test/amenities_test.csproj
+        dotnet test --no-build --verbosity normal /home/runner/work/Concierge/Concierge/src/amenities/amenities_test/amenities_test.csproj
