--- a/src/guest_webapp/package.json
+++ b/src/guest_webapp/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
+    "@cypress/react18": "^2.0.1",
     "@eslint/js": "^9.9.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
