--- a/src/staff_webapp/package.json
+++ b/src/staff_webapp/package.json
@@ -28,6 +28,7 @@
     "@angular/compiler-cli": "^17.3.0",
     "@types/jasmine": "~5.1.0",
     "autoprefixer": "^10.4.20",
+    "cypress": "^13.15.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
