--- a/docker-compose/configs/nginx.conf
+++ b/docker-compose/configs/nginx.conf
@@ -5,15 +5,7 @@ http {
         listen 80;
 
         location / {
-            proxy_pass http://webapp:8080;
-        }
-
-        location /accounts/ {
-            proxy_pass http://accounts:8080;
-        }
-        
-        location /permissions/ {
-            proxy_pass http://permissions:8080;
+            proxy_pass http://guest_webapp:8080;
         }
         
         location /sessions/ {
