--- a/docker-compose/docker-compose.dev.yaml
+++ b/docker-compose/docker-compose.dev.yaml
@@ -1,7 +1,6 @@
 include:
   - ../src/guest_webapp/docker-compose.yaml     # uses port 8081
   - ../src/staff_webapp/docker-compose.yaml     # uses port 8082
-  - ../src/amenities/docker-compose.yaml        # uses port 50004
 services:
   nginx:
     image: nginx:stable-alpine-slim
@@ -20,3 +19,8 @@ services:
     extends:
       file: ../src/incident_reports/docker-compose.yaml
       service: incident_reports
+      
+  amenities: #uses port 50004
+    extends:
+      file: ../src/amenities/docker-compose.dev.yaml
+      service: amenities
