--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v2
       
       - name: Build the Docker image
-        run: docker compose -f ./docker-compose/docker-compose.yaml build --wait --wait-timeout 300
+        run: docker compose -f ./docker-compose/docker-compose.yaml up --build --wait --wait-timeout 300 -d
         
       - name: set directory
         run: cd /home/runner/work/Concierge/Concierge/src/guest_webapp/
