--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -19,7 +19,7 @@ jobs:
         with:
           node-version: '22'
           cache: 'npm'
-          cache-dependency-path: '/home/runner/work/Concierge/Concierge/src/guest_webapp/package-lock.json'
+          cache-dependency-path: '/home/runner/work/Concierge/Concierge/src/guest_webapp/'
 
       - name: Node dependencies
         run: npm install /home/runner/work/Concierge/Concierge/src/guest_webapp/package-lock.json
