--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -29,5 +29,6 @@ jobs:
         with: 
           config-file: '/home/runner/work/Concierge/Concierge/src/guest_webapp/cypress.config.js'
           run-tests: '/home/runner/work/Concierge/Concierge/src/guest_webapp/cypress/e2e/*.cy.js'
+          working-directory: /home/runner/work/Concierge/Concierge/src/guest_webapp/
 
 
