--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -27,6 +27,7 @@ jobs:
       - name: Run Cypress integration test
         uses: cypress-io/github-action@v6
         with: 
+          headless: true
           config-file: '/home/runner/work/Concierge/Concierge/src/guest_webapp/cypress.config.js'
           run-tests: '/home/runner/work/Concierge/Concierge/src/guest_webapp/cypress/e2e/*.cy.js'
           working-directory: /home/runner/work/Concierge/Concierge/src/guest_webapp/
