--- a/src/amenities/docker-compose.yaml
+++ b/src/amenities/docker-compose.yaml
@@ -15,7 +15,8 @@ services:
     ports:
       - 50014:5432
     environment:
-      # - POSTGRES_USER=sa
+      - POSTGRES_USER=postgres
+      - PGUSER=postgres
       - POSTGRES_PASSWORD=sa
     healthcheck:
       test: ["CMD-SHELL", "pg_isready"]
