--- a/src/incident_reports/docker-compose.yaml
+++ b/src/incident_reports/docker-compose.yaml
@@ -15,9 +15,22 @@ services:
       - .:/app
   mongodb:
     image: mongo:3.0.2
-    ports: 50006:8080
+    ports: 50015:27017  
     environment:
-      - MONGODB_PASSWORD=password 
+      - MONGO_INITDB_ROOT_USERNAME=mongo_db_user
+      - MONGO_INITDB_ROOT_PASSWORD=password
+    volumes:
+      - mongodb:/data/db 
+  mongo-express:
+    image: mongo-express
+    restart: always
+    ports:
+      - 50025:8081
+    environment:
+      ME_CONFIG_MONGODB_ADMINUSERNAME: mongo_db_user
+      ME_CONFIG_MONGODB_ADMINPASSWORD: password
+      ME_CONFIG_MONGODB_URL: mongodb://mongo_db_user:password@mongo:27017/
+      ME_CONFIG_BASICAUTH: false
 volumes:
   mongodb:
     driver: local 
