--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -26,15 +26,17 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
-        cd /home/runner/work/Concierge/Concierge/src/accounts/
         python3 -m pip install --upgrade pip
         python3 -m pip install -r requirements.txt
+      working-directory: /home/runner/work/Concierge/Concierge/src/accounts/
        
 
     - name: Test with unittest
       run: |
-        cd /home/runner/work/Concierge/Concierge/src/accounts/
+        set -e
         python3 -m tests
+      working-directory: /home/runner/work/Concierge/Concierge/src/accounts/
+
 
   test_amenities:
 
@@ -52,15 +54,17 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
-        cd /home/runner/work/Concierge/Concierge/src/incident_reports/
         python3 -m pip install --upgrade pip
         python3 -m pip install -r requirements.txt
+      working-directory: /home/runner/work/Concierge/Concierge/src/incident_reports/
        
 
     - name: Test with unittest
       run: |
-        cd /home/runner/work/Concierge/Concierge/src/incident_reports/
+        set -e
         python3 -m unittest discover -s ./incident_reports_tests/ -p "*.py"
+      working-directory: /home/runner/work/Concierge/Concierge/src/incident_reports/
+
 
 # This action will build a .NET project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
