--- a/src/incident_reports/docker-compose.test.yaml
+++ b/src/incident_reports/docker-compose.test.yaml
@@ -1,6 +1,6 @@
 services:
   mongo:
-    image: mongo:3.0.2
+    image: mongo:5.0
     container_name: mongo
     ports: 
       - 27017:27017  
@@ -9,6 +9,11 @@ services:
       - MONGO_INITDB_ROOT_PASSWORD=password
     volumes:
       - mongo:/data/db 
+    healthcheck:
+      test: ["CMD", "mongo", "--eval", "db.adminCommand('ping')"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
   incident_reports:
     build: .
@@ -16,13 +21,13 @@ services:
       - 50005:8080
     environment:
       - DB_IMPLEMENTATION=MONGODB 
-      - DB_NAME=concierge
+      - DB_NAME=test_concierge
       - DB_HOST=mongo
       - DB_PORT=27017
       - DB_USERNAME=mongo_db_user 
       - DB_PASSWORD=password 
     volumes:
       - .:/app
+
 volumes:
   mongo:
-    driver: local 
