--- a/src/incident_reports/docker-compose.test.yaml
+++ b/src/incident_reports/docker-compose.test.yaml
@@ -1,7 +1,7 @@
 services:
   mongo:
     image: mongo:5.0
-    container_name: mongo
+    container_name: mongo_test
     ports: 
       - 27017:27017  
     environment:
