Sessions service initialized

--- a/docker-compose/configs/nginx.conf
+++ b/docker-compose/configs/nginx.conf
@@ -8,8 +8,8 @@ http {
             proxy_pass http://guest_webapp:8080;
         }
         
-        location /sessions/ {
-            proxy_pass http://sessions:8080;
+        location /sessions {
+            proxy_pass http://permissions:8080;
         }
 
         location /incident_reports/ {
