--- a/src/incident_reports/docker-compose.test.yaml
+++ b/src/incident_reports/docker-compose.test.yaml
@@ -8,7 +8,8 @@ services:
       - MONGO_INITDB_ROOT_USERNAME=mongo_db_user
       - MONGO_INITDB_ROOT_PASSWORD=password
     volumes:
-      - mongo:/data/db 
+      - mongo:/data/db
+      - ./configs/init_mongo_test.js:/docker-entrypoint-initdb.d/init_mongo_test.js 
     healthcheck:
       test: ["CMD", "mongo", "--eval", "db.adminCommand('ping')"]
       interval: 30s
