Added connection to mongodb and added more functionality to database interface

--- a/docker-compose/docker-compose.yaml
+++ b/docker-compose/docker-compose.yaml
@@ -2,6 +2,7 @@ include:
   - ../src/guest_webapp/docker-compose.yaml     # uses port 8081
   - ../src/staff_webapp/docker-compose.yaml     # uses port 8082
   - ../src/amenities/docker-compose.yaml        # uses port 50004
+  - ../src/accounts/docker-compose.yaml         # uses port 50001
 services:
   nginx:
     image: nginx:stable-alpine-slim
@@ -11,10 +12,6 @@ services:
     volumes:
       - ./configs/nginx.conf:/etc/nginx/nginx.conf
 
-  accounts:
-    build: ../src/accounts
-    ports:
-      - 50001:8080
 
   incident_reports: #uses port 50005
     extends:
