--- a/src/incident_reports/docker-compose.yaml
+++ b/src/incident_reports/docker-compose.yaml
@@ -9,7 +9,6 @@ services:
       - MONGO_INITDB_ROOT_PASSWORD=password
     volumes:
       - mongo:/data/db 
-      - ./configs/init_mongo_prod.js:/docker-entrypoint-initdb.d/init_mongo_prod.js
     healthcheck:
       test: ["CMD", "mongo", "--eval", "db.adminCommand('ping')"]
       interval: 30s
@@ -20,9 +19,10 @@ services:
     build: .
     ports:
       - 50005:8080
+    depends_on:
+      - mongo
     environment:
       - DB_IMPLEMENTATION=MONGODB 
-      - DB_NAME=concierge
       - DB_HOST=mongo
       - DB_PORT=27017
       - DB_USERNAME=mongo_db_user 
