--- a/src/incident_reports/docker-compose.test.yaml
+++ b/src/incident_reports/docker-compose.test.yaml
@@ -1,9 +1,7 @@
 services:
-  mongo:
+  mongo_incident_reports_test:
     image: mongo:4.4.18
-    container_name: mongo_test
-    ports: 
-      - 27017:27017  
+    container_name: mongo_incident_reports_test
     environment:
       - MONGO_INITDB_ROOT_USERNAME=mongo_db_user
       - MONGO_INITDB_ROOT_PASSWORD=password
@@ -20,10 +18,10 @@ services:
     ports:
       - 50005:8080
     depends_on:
-      - mongo
+      - mongo_incident_reports_test
     environment:
       - DB_IMPLEMENTATION=MONGODB 
-      - DB_HOST=mongo
+      - DB_HOST=mongo_incident_reports_test
       - DB_PORT=27017
       - DB_USERNAME=mongo_db_user 
       - DB_PASSWORD=password 
