--- a/docker-compose/configs/nginx.conf
+++ b/docker-compose/configs/nginx.conf
@@ -11,6 +11,12 @@ http {
         location /sessions {
             proxy_pass http://permissions:8080;
         }
+        location /permissions {
+            proxy_pass http://permissions:8080;
+        }
+        location /permission-groups {
+            proxy_pass http://permissions:8080;
+        }
 
         location /incident_reports/ {
             proxy_pass http://incident_reports:8080;
