fixed broken tests

--- a/src/accounts/.env.prod
+++ b/src/accounts/.env.prod
@@ -4,4 +4,4 @@ DB_PORT=27017
 DB_URI = mongodb://test:test@mongodb:27017/accounts_data
 MONGO_USERNAME: test
 MONGO_PASSWORD: test
-PRODUCTION = true
+DEPLOYMENT=production
