--- a/src/task_system/docker-compose.test.yaml
+++ b/src/task_system/docker-compose.test.yaml
@@ -5,15 +5,15 @@ services:
       - 50006:8080
     environment:
       - DB_IMPLEMENTATION=POSTGRES
-      - DB_HOST=task_system_postgres
+      - DB_HOST=task_system_postgres_test
       - DB_PORT=5432
       - DB_USERNAME=postgres
       - DB_PASSWORD=sa
     depends_on:
-      - task_system_postgres
-  task_system_postgres:
+      - task_system_postgres_test
+  task_system_postgres_test:
     image: postgres:latest
-    container_name: task_system_postgres
+    container_name: task_system_postgres_test
     ports:
       - 50016:5432
     environment:
@@ -27,7 +27,7 @@ services:
       retries: 10
     volumes:
       - ./configs:/docker-entrypoint-initdb.d
-      - task_system_postgres:/var/lib/postgresql/data
+      - task_system_postgres_test:/var/lib/postgresql/data
+
 volumes:
-  task_system_postgres:
-    driver: local
+  task_system_postgres_test:
