Adding integration tests

--- a/src/accounts/.env.prod
+++ b/src/accounts/.env.prod
@@ -5,3 +5,4 @@ DB_URI = mongodb://test:test@mongodb:27017/accounts_data
 MONGO_USERNAME: test
 MONGO_PASSWORD: test
 DEPLOYMENT=production
+LOCAL_SERVICE_PORT=50001
