--- a/src/accounts/requirements.txt
+++ b/src/accounts/requirements.txt
@@ -1,4 +1,20 @@
+blinker==1.8.2
+certifi==2024.8.30
+cffi==1.17.1
+charset-normalizer==2.1.1
+click==8.1.7
+coverage==7.6.1
+cryptography==43.0.3
+dnspython==2.7.0
 Flask==3.0.3
-requests==2.28.1
-flask-cors==5.0.0
+Flask-Cors==5.0.0
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.4
+MarkupSafe==2.1.5
+pycparser==2.22
+PyJWT==2.9.0
 pymongo==4.10.1
+requests==2.28.1
+urllib3==1.26.20
+Werkzeug==3.0.4
