--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -26,17 +26,17 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
+        cd /home/runner/work/Concierge/Concierge/src/accounts/
         python3 -m pip install --upgrade pip
         python3 -m pip install -r requirements.txt
-      working-directory: /home/runner/work/Concierge/Concierge/src/accounts/
        
 
     - name: Test with unittest
-      run: python3 -m tests
-      working-directory: /home/runner/work/Concierge/Concierge/src/accounts/
+      run: |
+        cd /home/runner/work/Concierge/Concierge/src/accounts/
+        python3 -m unit_tests
 
-
-  test_incident_reports:
+  test_amenities:
 
     runs-on: ubuntu-latest
     strategy:
@@ -52,20 +52,20 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
+        cd /home/runner/work/Concierge/Concierge/src/incident_reports/
         python3 -m pip install --upgrade pip
         python3 -m pip install -r requirements.txt
-      working-directory: /home/runner/work/Concierge/Concierge/src/incident_reports/
        
 
     - name: Test with unittest
-      run: python3 -m unittest discover -s ./incident_reports_tests/ -p "*.py"
-      working-directory: /home/runner/work/Concierge/Concierge/src/incident_reports/
-
+      run: |
+        cd /home/runner/work/Concierge/Concierge/src/incident_reports/
+        python3 -m unittest discover -s ./incident_reports_tests/ -p "*.py"
 
 # This action will build a .NET project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
 
-  build_and_test_amenities:
+  build:
 
     runs-on: ubuntu-latest
 
@@ -80,4 +80,5 @@ jobs:
     - name: Build
       run: dotnet build --no-restore /home/runner/work/Concierge/Concierge/src/amenities/amenities_server/amenities_server.csproj
     - name: Test
-      run: dotnet test --verbosity normal /home/runner/work/Concierge/Concierge/src/amenities/amenities_test/amenities_test.csproj
+      run: |
+        dotnet test --verbosity normal /home/runner/work/Concierge/Concierge/src/amenities/amenities_test/amenities_test.csproj
