--- a/.github/workflows/push-docker.yaml
+++ b/.github/workflows/push-docker.yaml
@@ -45,8 +45,8 @@ jobs:
 
       - name: Build and push Docker images with Docker Compose
         run: |
-          docker-compose -f ./docker-compose/docker-compose.yaml build
-          docker-compose -f ./docker-compose/docker-compose.yaml push
+          docker compose -f ./docker-compose/docker-compose.yaml build
+          docker compose -f ./docker-compose/docker-compose.yaml push
 
       - name: Generate artifact attestation
         uses: actions/attest-build-provenance@v1
