--- a/.github/workflows/push-docker.yaml
+++ b/.github/workflows/push-docker.yaml
@@ -49,13 +49,14 @@ jobs:
           docker compose -f ./docker-compose/docker-compose.yaml push
           
       - name: Get image digest
-        id: digest
+        id: get_digest
         run: |
-          echo "DIGEST=$(docker inspect --format='{{index .RepoDigests 0}}' conciergeapp/concierge:latest)" >> $GITHUB_ENV
-      
+          DIGEST=$(docker inspect --format='{{index .RepoDigests 0}}' conciergeapp/concierge:latest)
+          echo "DIGEST=$DIGEST" >> $GITHUB_ENV 
+
       - name: Generate artifact attestation
         uses: actions/attest-build-provenance@v1
         with:
-          subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME}}
-          subject-digest: ${{ steps.push.outputs.digest }}
+          subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          subject-digest: ${{ env.DIGEST }}  # Use the captured digest
           push-to-registry: true
