update docker builds

--- a/.github/workflows/push-docker.yaml
+++ b/.github/workflows/push-docker.yaml
@@ -37,14 +37,33 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@v3
-        with:
-          images: conciergeapp/concierge
 
-      - name: Build and push Docker images with Docker Compose
+      - name: Account service
+        working-directory: ./src/accounts
         run: |
-          docker compose -f ./docker-compose/docker-compose.yaml build
-          docker compose -f ./docker-compose/docker-compose.yaml push
-        
+          docker-compose -f docker-compose.yaml build
+          docker-compose -f docker-compose.yaml push
+
+      - name: Guest Webapp
+        working-directory: ./src/guest_webapp
+        run: |
+          docker-compose -f docker-compose.yaml build
+          docker-compose -f docker-compose.yaml push
+
+      - name: Staff Webapp
+        working-directory: ./src/staff_webapp
+        run: |
+          docker-compose -f docker-compose.yaml build
+          docker-compose -f docker-compose.yaml push
+
+      - name: Incident Reports
+        working-directory: ./src/incident_reports
+        run: |
+          docker-compose -f docker-compose.yaml build
+          docker-compose -f docker-compose.yaml push
+
+      - name: amenities
+        working-directory: ./src/amenities
+        run: |
+          docker-compose -f docker-compose.yaml build
+          docker-compose -f docker-compose.yaml push
