added environment variable to test accounts

--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -17,7 +17,8 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ["3.9", "3.10", "3.11"]
-
+    env:   
+      deployent: testing
     steps:
     - uses: actions/checkout@v4
     - name: Set up Python ${{ matrix.python-version }}
