--- a/.github/workflows/push-docker.yaml
+++ b/.github/workflows/push-docker.yaml
@@ -13,7 +13,7 @@ on:
   release:
     types: [published]
   pull_request:
-    branches: [ "dev" ]
+    branches: [  ]
 
 jobs:
   push_to_registry:
