--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -33,3 +33,24 @@ jobs:
           working-directory: /home/runner/work/Concierge/Concierge/src/guest_webapp/
 
 
+      - strategy:
+          fail-fast: false
+          matrix:
+            python-version: ["3.9", "3.10", "3.11"]
+        steps:
+        - uses: actions/checkout@v4
+        - name: Set up Python ${{ matrix.python-version }}
+          uses: actions/setup-python@v3
+          with:
+            python-version: ${{ matrix.python-version }}
+        - name: Install dependencies
+          run: |
+            cd /home/runner/work/Concierge/Concierge/src/accounts/
+            python3 -m pip install --upgrade pip
+            python3 -m pip install -r requirements.txt
+       
+
+      - name: Accounts integration tests
+        run: |
+          cd /home/runner/work/Concierge/Concierge/src/accounts/
+          python3 -m integration_tests
