--- a/src/accounts/.env.dev
+++ b/src/accounts/.env.dev
@@ -1,8 +1,6 @@
 DB_IMPLEMENTATION=MONGO
 DB_HOST=accounts-mongo
 DB_PORT=27017
-DB_URI=mongodb://test:test@mongodb:27017/accounts_data
-MONGO_USERNAME=test
-MONGO_PASSWORD=test
+DB_URI=mongodb://accounts_mongo:27017/accounts_mongo
 DEPLOYMENT=development
 LOCAL_SERVICE_PORT=50001
