--- a/src/accounts/docker-compose.dev.yaml
+++ b/src/accounts/docker-compose.dev.yaml
@@ -1,17 +1,23 @@
 services:
+  accounts_mongo:
+    image: mongo:4.4.18
+    container_name: accounts_mongo
+    ports:
+      - 27017:27017 #Expose the port for testing
+    healthcheck:
+      test: ["CMD", "mongo", "--eval", "db.adminCommand('ping')"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+
   accounts:
     build: .
-    env_file:
-      - .env.dev
     ports:
       - 50001:8080
-
-
-  accounts-mongo:
-    image: mongo:4.4.18
-    container_name: accounts-mongo-container
-    ports:
-      - "27017:27017"
-    env_file:
+    depends_on:
+      - accounts_mongo
+    env_file: 
       - .env.dev
+
+
 
