--- a/.github/workflows/python-integration-tests.yml
+++ b/.github/workflows/python-integration-tests.yml
@@ -16,22 +16,20 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Build the Docker image
-        run: docker compose -f ./src/accounts/docker-compose.yaml up --build --wait --wait-timeout 300 -d --build accounts-mongo
+        run: docker compose -f ./src/accounts/docker-compose.yaml up --build --wait --wait-timeout 300 -d
         
 
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v3
         with:
           python-version: ${{ matrix.python-version }}
+
       - name: Install python dependencies
         run: |
           cd /home/runner/work/Concierge/Concierge/src/accounts/
           python3 -m pip install --upgrade pip
           python3 -m pip install -r requirements.txt
-      - name: Run App
-        run: |
-          cd /home/runner/work/Concierge/Concierge/src/accounts/
-          python3 -m app
+
       - name: Test account integration tests
         run: |
           cd /home/runner/work/Concierge/Concierge/src/accounts/
