--- a/docker-compose/docker-compose.dev.yaml
+++ b/docker-compose/docker-compose.dev.yaml
@@ -10,10 +10,16 @@ services:
     volumes:
       - ./configs/nginx.conf:/etc/nginx/nginx.conf
 
-  accounts:
-    build: ../src/accounts
-    ports:
-      - 50001:8080
+  accounts: #uses port 50001
+    extends:
+      file: ../src/accounts/docker-compose.dev.yaml
+      service: accounts
+    depends_on:
+      - accounts_mongo
+  accounts_mongo:
+    extends:
+      file: ../src/accounts/docker-compose.dev.yaml
+      service: accounts_mongo
 
   incident_reports: #uses port 50005
     extends:
