--- a/docker-compose/configs/nginx.conf
+++ b/docker-compose/configs/nginx.conf
@@ -16,7 +16,9 @@ http {
         location /permission-groups {
             proxy_pass http://permissions:8080;
         }
-
+        location /accounts {
+            proxy_pass http://accounts:8080;
+        }
         location /incident_reports/ {
             proxy_pass http://incident_reports:8080;
         }
