Task system permission restriction done

--- a/docker-compose/configs/nginx.conf
+++ b/docker-compose/configs/nginx.conf
@@ -19,15 +19,13 @@ http {
         location /accounts {
             proxy_pass http://accounts:8080;
         }
-        location /incident_reports/ {
+        location /incident_reports {
             proxy_pass http://incident_reports:8080;
         }
-        
-        location /amenities/ {
+        location /amenities {
             proxy_pass http://amenities:8080;
         }
-
-        location /tasks/ {
+        location /tasks {
             proxy_pass http://task_system:8080;
         }
     }
