--- a/.github/workflows/front-end-integration-tests.yml
+++ b/.github/workflows/front-end-integration-tests.yml
@@ -28,7 +28,6 @@ jobs:
       - name: Run Cypress integration test
         uses: cypress-io/github-action@v6
         with: 
-          headless: true
+          headed: false
           config-file: '/home/runner/work/Concierge/Concierge/src/guest_webapp/cypress.config.js'
-          run-tests: '/home/runner/work/Concierge/Concierge/src/guest_webapp/cypress/e2e/*.cy.js'
           working-directory: /home/runner/work/Concierge/Concierge/src/guest_webapp/
